--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-i18next": "^13.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
