--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.1",
     "flag-icons": "^6.11.1",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.6",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
